--- a/Sarcasm_Detection_with_Transformers.ipynb
+++ b/Sarcasm_Detection_with_Transformers.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyO5I0/YfSz/3+TVIQNdsVIU",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -7202,6 +7204,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/saisampaththumati-datascientists/Transformer_encoding_decoding/blob/main/Sarcasm_Detection_with_Transformers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 1,
